# simd_algorithm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  change_case.cpp
include/: change_case.h  is_sorted.h  minmax.h  reverse.h  simd_supported.h
src/: change_case.h  minmax.h  simd_supported.h
test/: change_case.cpp  is_sorted.cpp  minmax.cpp  reverse.cpp  simd_supported.cpp
